Fix flicker issue (but introduce overlap with header image)

--- a/_sass/modules/_navigation.scss
+++ b/_sass/modules/_navigation.scss
@@ -1,14 +1,13 @@
 .site-nav {
   @include default-animation(background-color);
 
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   z-index: 2;
 
   .fixed & {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
     background-color: $navigation-background;
   }
 
